force-app/main/default/objects/lightningbuddy__Record_Criteria__c/fields/lightningbuddy__Action__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Action__c</fullName>
    <label>Action</label>
    <referenceTo>lightningbuddy__Actions__c</referenceTo>
    <relationshipLabel>Record Criteria</relationshipLabel>
    <relationshipName>Record_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>