force-app/main/default/objects/lightningbuddy__Record_Criteria__c/fields/lightningbuddy__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Field_Name__c</fullName>
    <label>Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>