force-app/main/default/objects/lightningbuddy__Record_Criteria__c/fields/lightningbuddy__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Field_Value__c</fullName>
    <label>Field Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>